<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/back1"
    android:weightSum="10">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/your_password"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/gray_dark"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_send"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/lemon"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/txt_forgotten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotten"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/Purple"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/txt_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/Purple"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>