<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:background="@drawable/login"
    android:weightSum="9"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edt_mobile"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_no"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="phone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/your_password"
            android:inputType="numberPassword"
            android:layout_gravity="center"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/lemon"/>
    </LinearLayout>
</LinearLayout>